--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="loader">
+        
+    </div>
+    <div id="main">
+      <div id="page1"></div>
+      <div id="page2"></div>
+      <div id="page3"></div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
