--- a/index.html
+++ b/index.html
@@ -77,20 +77,19 @@
             <h4>Contacts</h4>
           </div>
         </div>
-        <div class="hero">
+        <div class="hero" id="hero1">
           <h1>We Design</h1>
         </div>
-        <div class="hero">
+        <div class="hero" id="hero2">
           <h1>Unique</h1>
         </div>
         <div class="hero" id="hero3">
           <h1>
-            <h2>Web</h2>
-            <h3>/</h3>
+            <h2>Web/</h2>
             <h2>Graphic</h2>
           </h1>
         </div>
-        <div class="hero">
+        <div class="hero" id="hero4">
           <h1>Experience</h1>
         </div>
       </div>
