--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
           ></video>
         </div>
       </div>
-      <div id="page3" data-scroll data-scroll-speed="-2.5"></div>
+      <div id="page3" data-scroll data-scroll-speed="-2.5">
+        <h1>Our Projects</h1>
+        <div class="underline"></div>
+      </div>
       <div id="page4" data-scroll>
         <div id="page4-content">
           <h1>About Obys</h1>
