--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
         </div>
       </div>
       <div id="page3" data-scroll data-scroll-speed="-2.5">
-        <h1>Our Projects</h1>
+        <h1>OUR PROJECTS</h1>
         <div class="underline"></div>
+        <div id="image-div-container"></div>
       </div>
       <div id="page4" data-scroll>
         <div id="page4-content">
