--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Obys Agency</title>
+
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
+    <!-- locomotive-scroll.css -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"
     />
+    <!-- shery js css  -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/sheryjs/dist/Shery.css"
     />
+    <!-- remixicon css  -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+    <!-- animate.css for textillate.js(dependency) -->
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"
+    /> -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -242,7 +251,10 @@
         </div>
       </div>
       <div id="footer" data-scroll data-scroll-speed="-2.5">
-        <h1>Let's Create</h1>
+        <div id="footer-text">
+          <h1>Let's Create</h1>
+          <h2>Let's Create</h2>
+        </div>
         <div class="underline"></div>
         <div id="footer-div">
           <div class="box">
@@ -268,7 +280,9 @@
       </div>
     </div>
 
+    <!-- locomotive cdn  -->
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <!-- gsap cdn  -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
       integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA=="
@@ -276,6 +290,7 @@
       referrerpolicy="no-referrer"
     ></script>
 
+    <!-- scrolltrigger cdn  -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/ScrollTrigger.min.js"
       integrity="sha512-P2IDYZfqSwjcSjX0BKeNhwRUH8zRPGlgcWl5n6gBLzdi4Y5/0O4zaXrtO4K9TZK6Hn1BenYpKowuCavNandERg=="
@@ -283,14 +298,33 @@
       referrerpolicy="no-referrer"
     ></script>
 
+    <!-- three js cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
 
     <!-- ControlKit is needed for Debug Panel -->
     <script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
+    <!-- shery js cdn  -->
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/sheryjs/dist/Shery.js"
     ></script>
+    <!-- jquery cdn for textillate.js(dependency) -->
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script> -->
+    <!-- lettering js cdn for textillate.js-->
+    <!-- <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.6.1/jquery.lettering.min.js"
+      integrity="sha512-VJ/iYbiu1eJ6yLimfTi65t2R9TFcG5D9X8ZCfbbEFhTfPnKJh8byoKXEawi5ScJZBYL1eiirL1+MczZDx0Tz9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script> -->
+    <!-- textillate.js cdn for text animation  -->
+    <!-- <script src="
+https://cdn.jsdelivr.net/npm/textillate@0.4.1/jquery.textillate.min.js
+"></script> -->
     <script src="script.js"></script>
   </body>
 </html>
